Hotfixes for the server part

--- a/dlmp3/templates/index.html
+++ b/dlmp3/templates/index.html
@@ -4,7 +4,7 @@
     <div class=songlist>
     {% for song in songs %}
       <div class=song>
-        <b>{{ song.singer }}</b> {{ song.song }}
+        <b>{{ song.artist }}</b> {{ song.title }}
         <div class=download-btn>
           <a href="#">Télécharger</a>
         </div>
