--- a/dlmp3/templates/layout.html
+++ b/dlmp3/templates/layout.html
@@ -23,7 +23,7 @@
       </a>
       <div id="header-right">
         <form action="{{ url_for('index') }}" method=post>
-          <input id="search" type="text" placeholder="Search for music" onfocus="if(this.value==this.defaultValue) this.value='';" name="recherche" />
+          <input id="search" type="text" placeholder="Search for music" onfocus="if(this.value==this.defaultValue) this.value='';" name="search" />
         </form>
       </div>
     </header>
