--- a/dlmp3/templates/layout.html
+++ b/dlmp3/templates/layout.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="author" content="Etienne Girault"/>
     <title>DLMP3</title>
-    <link rel=stylesheet href="{{ url_for('static', filename='style/style.css') }}">
+    <link rel=stylesheet href="{{ url_for('static', filename='style.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}" width="48">
   </head>
   <body>
@@ -17,14 +17,12 @@
           </div>
           <div id="title-wrapper">
             <h1>DLMP3</h1>
-            <h2>Music MP3 downloader</h2>
+            {% block title %}{% endblock %}
           </div>
         </div>
       </a>
       <div id="header-right">
-        <form action="{{ url_for('index') }}" method=post>
-          <input id="search" type="text" placeholder="Search for music" onfocus="if(this.value==this.defaultValue) this.value='';" name="search" />
-        </form>
+        {% block head %}{% endblock %}
       </div>
     </header>
     <div id="page">
@@ -32,13 +30,20 @@
         <nav>
         <!-- Barre de navigation -->
           <ul>
-            <li><a href="#">DL</a></li>
-            <li><a href="#">Top</a></li>
-            <li><a href="#">Config</a></li>
+            <a href="/list">
+              <li>DL</li>
+            </a>
+            <a href="/top">
+              <li>Top</li>
+            </a>
+            <a href="/conf">
+              <li>Config</li>
+            </a>
           </ul>
         </nav>
         <section>
           Je suis la sidebar
+          {% block sidebar %}{% endblock %}
         </section>
       </div>
       <section id="content">
