--- a/dlmp3/templates/login.html
+++ b/dlmp3/templates/login.html
@@ -1,6 +1,12 @@
 {% extends "layout.html" %}
-{% block body %}
+
+
+{% block title %}
   <h2>Login</h2>
+{% endblock %}
+
+
+{% block body %}
   {% if error %}<p class=error><strong>Erreur:</strong> {{ error }}{% endif %}
   <form action="{{ url_for('login') }}" method=post>
     <dl>
